# sutra-core

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_IMPLEMENTATION.md  README_PHASE2_COMPLETE.md  README_PHASE3_COMPLETE.md  README_PHASE4_COMPLETE.md  README_PHASE5_COMPLETE.md  README_PHASE6_COMPLETE.md  README_PHASE7_COMPLETE.md  alembic.ini  dashboard.html  docker-compose.prod.yml  docker-compose.yml  env.production.template  pyproject.toml  pytest.ini  requirements.txt
.github/: dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml  ci.yml  label.yml  release.yml  stale.yml
assets/: README.md
docker/prometheus/: alerts.yml  prometheus.yml
docs/: AGENT_STRATEGY.md  BACKEND_ARCHITECT_REVIEW.md  CODE_REVIEW_OPTIMIZATION_SUMMARY.md  COMPREHENSIVE_SYSTEM_REVIEW.md  CRITICAL_IMPLEMENTATION_PLAN.md  DATABASE_OPTIMIZER_REVIEW.md  DEVOPS_AUTOMATOR_REVIEW.md  DISASTER_RECOVERY_RUNBOOK.md  EXECUTIVE_SUMMARY.md  FINAL_COMPLETION_SUMMARY.md  FRONTEND_DEVELOPER_REVIEW.md  IMMEDIATE_ACTIONS_COMPLETION_REPORT.md  MULTI_AGENT_PLAN.md  PHASE_2_OPTIMIZATION_SUMMARY.md  PHASE_4_DATABASE_OPTIMIZATION_SUMMARY.md  PHASE_7_SECURITY_ENHANCEMENT_SUMMARY.md  PRD.md  PRODUCTION_BACKUP_PROCEDURES.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  PRODUCTION_DEPLOYMENT_EXECUTION_GUIDE.md  PRODUCTION_DEPLOYMENT_SUMMARY.md  PRODUCTION_MONITORING_SETUP.md  PRODUCTION_RUNBOOKS.md  PRODUCTION_SECURITY_HARDENING.md  PROFESSIONAL_SAAS_DEVELOPMENT_PLAN.md  QUICK_START_DEPLOYMENT.md  SAAS_IMPLEMENTATION_ROADMAP.md  SECURITY_ENGINEER_REVIEW.md
frontend/: package-lock.json  package.json
frontend/src/: proxy.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/inventory/: page.tsx
frontend/src/app/dashboard/invoices/: page.tsx
frontend/src/app/dashboard/orders/: page.tsx
frontend/src/app/dashboard/settings/: page.tsx
frontend/src/app/dashboard/udhaar/: page.tsx
frontend/src/components/dashboard/: header.tsx  inventory-alerts.tsx  kpi-card.tsx  recent-orders.tsx  sidebar.tsx
frontend/src/components/landing/: architecture.tsx  capabilities.tsx  cta-band.tsx  footer.tsx  hero.tsx  navbar.tsx  pricing.tsx  swarm-canvas.tsx
frontend/src/lib/: api.ts  hooks.ts
scripts/: backup_database.sh  deploy.sh  deploy_production.sh  generate_production_secrets.py  restore_database.sh  run_tests.sh  seed_demo.py  uptime_monitor.sh  verify_backup.sh
src/: main.py
src/agents/: __init__.py  coordinator.py
src/agents/auditor/: __init__.py  auditor_agent.py
src/agents/common/: __init__.py  base_agent.py  redis_streams.py
src/agents/liaison/: __init__.py  liaison_agent.py
src/agents/messages/: __init__.py  message_audit.py  message_encryption.py  message_schema.py
src/agents/strategist/: __init__.py  strategist_agent.py
src/api/middleware/: rate_limit.py  security.py  validation.py
src/api/routes/: agents.py  auth.py  customers.py  dashboard.py  health.py  inventory.py  orders.py  tenants.py  webhooks.py
src/api/schemas/: common.py  customers.py  inventory.py  orders.py
src/api/services/: whatsapp.py
src/config/: settings.py
src/db/: connection.py  models.py  monitoring.py  queries.py  security.py
src/db/migrations/: env.py  script.py.mako
src/db/migrations/versions/: 20260426_000000_001_initial_schema.py
src/security/: auth.py  enhancements.py  rbac.py
src/tenancy/: middleware.py
tests/: conftest.py
tests/agents/: test_liaison_agent.py
tests/api/: test_api_endpoints.py
tests/integration/: test_agent_communication.py
webpages/: LP6.html  LP8.html
