[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sutra-core"
version = "1.0.0"
description = "AI-powered WhatsApp ERP for India's 63 million MSMEs"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Ravi Kumar V.", email = "ravikumarve@users.noreply.github.com" },
]
keywords = [
  "whatsapp", "erp", "india", "msme", "hinglish", "voice-to-order",
  "gst", "invoicing", "multi-agent", "ai", "fastapi",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Office/Business :: Financial :: Accounting",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Natural Language :: Hindi",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
]
requires-python = ">=3.12"

dependencies = [
  # Core framework
  "fastapi>=0.104",
  "uvicorn[standard]>=0.24",
  "pydantic>=2.5",
  "pydantic-settings>=2.1",

  # Database
  "sqlalchemy>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.12",
  "psycopg2-binary>=2.9",

  # Async
  "aiofiles>=23.2",

  # Security
  "python-jose[cryptography]>=3.3",
  "passlib[bcrypt]>=1.7",
  "python-multipart>=0.0.6",
  "cryptography>=41.0",

  # Redis
  "redis>=5.0",
  "hiredis>=2.2",

  # LLM & AI
  "openai>=1.3",
  "google-generativeai>=0.3",

  # NLP & Speech
  "numpy>=1.26",
  "scipy>=1.11",

  # PDF
  "weasyprint>=60",
  "cairosvg>=2.7",

  # Validation
  "email-validator>=2.1",
  "phonenumbers>=8.13",

  # Monitoring
  "prometheus-client>=0.19",
  "structlog>=23.2",

  # HTTP
  "httpx>=0.25",
  "requests>=2.31",

  # Utilities
  "python-dotenv>=1.0",
  "pytz>=2023.3",
  "python-dateutil>=2.8",
  "tenacity>=8.2",

  # Performance
  "orjson>=3.9",
  "ujson>=5.8",

  # Data processing
  "pandas>=2.1",
  "openpyxl>=3.1",

  # Image
  "Pillow>=10.1",
  "qrcode>=7.4",

  # Scheduling
  "apscheduler>=3.10",
]

[project.optional-dependencies]
dev = [
  # Formatting & linting
  "black>=23.11",
  "ruff>=0.1",
  "mypy>=1.7",
  "isort>=5.12",

  # Pre-commit
  "pre-commit>=3.5",

  # Docs
  "mkdocs>=1.5",
  "mkdocs-material>=9.4",
]
test = [
  "pytest>=7.4",
  "pytest-asyncio>=0.21",
  "pytest-cov>=4.1",
  "httpx>=0.25",
  "faker>=20.1",
]
prod = [
  "gunicorn>=21.2",
  "supervisor>=4.2",
]
all = [
  "sutra-core[dev,test,prod]",
]

[project.urls]
Homepage = "https://github.com/ravikumarve/sutra-core"
Repository = "https://github.com/ravikumarve/sutra-core"
Documentation = "https://github.com/ravikumarve/sutra-core#readme"
Issues = "https://github.com/ravikumarve/sutra-core/issues"
Changelog = "https://github.com/ravikumarve/sutra-core/releases"

[project.scripts]
sutra = "src.main:main"

[project.entry-points."sutra.agents"]
liaison = "src.agents.liaison.liaison_agent:LiaisonAgent"
strategist = "src.agents.strategist.strategist_agent:StrategistAgent"
auditor = "src.agents.auditor.auditor_agent:AuditorAgent"

[tool.hatch.build.targets.wheel]
packages = ["src/"]

[tool.hatch.build.targets.sdist]
include = [
  "src/**",
  "tests/**",
  "scripts/**",
  "docker/**",
  "alembic.ini",
  "docker-compose*.yml",
  "Dockerfile",
  "env.production.template",
  "pytest.ini",
]

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "unit: Unit tests (fast, no external services)",
  "integration: Integration tests (require DB/Redis)",
  "slow: Slow tests (performance benchmarks)",
  "security: Security-related tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
  "src/db/migrations/*",
  "src/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if __name__ == .__main__.:",
  "if settings.debug",
  "raise NotImplementedError",
]

[tool.coverage.threshold]
agent_pipeline = 75
financial_modules = 90
